<resources>
    <string name="app_name">Connect 4</string>
    <string name="game_mode">Game Mode</string>
    <string name="pvp">PvP</string>
    <string name="pvc">PvC</string>
    <string name="board_size">Board Size</string>
    <string name="start">Start</string>
    <string name="menu">Menu</string>
    <string name="time">TextView</string>
    <string name="undo">Undo</string>
    <string name="time_amount_sec">Time Amount(Sec)</string>
    <string name="timeSwitch">Time Mode</string>
    <string name="todo">TODO</string>
</resources>
