<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="connect4.emir.connect4.MenuScreen">

    <LinearLayout
        android:id="@+id/gameIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center"
        android:orientation="horizontal"
        android:paddingBottom="25dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/connect4_symbol" android:contentDescription="@string/todo" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/gamemode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/textViewName1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/game_mode"
            android:textColor="#33ff33"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gamemodebuttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/pvp"
            android:textSize="17dp"
            android:background="@drawable/pvp_pvc_buttons"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/pvc"
            android:textSize="17dp"
            android:background="@drawable/pvp_pvc_buttons"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/boardsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="50dp"
        android:paddingLeft="95dp">

        <TextView
            android:id="@+id/textViewName2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/board_size"
            android:textColor="#33ff33"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editSize"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="#33ff33"
            android:textCursorDrawable="@color/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/timeSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center"
        android:orientation="horizontal"
        android:paddingTop="50dp">

        <Switch
            android:id="@+id/switchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center"
            android:switchPadding="20dp"
            android:text="@string/timeSwitch"
            android:textColor="#33ff33"
            android:textSize="25sp"
            android:textStyle="bold">
        </Switch>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/selectTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingLeft="80dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textViewName3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_amount_sec"
            android:textColor="#33ff33"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editSize2"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="#33ff33"
            android:textCursorDrawable="@color/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold"
            android:backgroundTint="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:background="@drawable/start"/>

    </LinearLayout>


</LinearLayout>
